Project

General

Profile

Actions

Bug #38006

closed

trash purge tries to remove non-user images

Added by Mykola Golub over 5 years ago. Updated about 5 years ago.

Status:
Resolved
Priority:
Normal
Assignee:
Target version:
-
% Done:

0%

Source:
Tags:
Backport:
mimic
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

% rbd create mtest -s 1G                                                             
% rbd migration prepare mtest mtest1
% rbd trash ls
% rbd trash ls --all
b2822870bb1c mtest
% rbd trash purge
2019-01-22 15:46:03.169 7f74317fa700 -1 librbd::image::RefreshRequest: image being migrated
2019-01-22 15:46:03.169 7f7430ff9700 -1 librbd::image::OpenRequest: failed to refresh image: (30) Read-only file system
2019-01-22 15:46:03.173 7f7430ff9700 -1 librbd::ImageState: 0x5614ac47d570 failed to open image: (30) Read-only file system
2019-01-22 15:46:03.177 7f7430ff9700 -1 librbd::image::RemoveRequest: 0x5614ac20e720 handle_open_image: error opening image: (30) Read-only file system
2019-01-22 15:46:03.177 7f7451508500 -1 librbd::api::Trash: remove: error removing image b2822870bb1c, which is pending deletion
Removing images: 2019-01-22 15:46:03.185 7f7451508500 -1 librbd::api::Trash: purge: remove error: (30) Read-only file system
0% complete...failed.

Related issues 1 (0 open1 closed)

Copied to rbd - Backport #38032: mimic: trash purge tries to remove non-user imagesResolvedAshish SinghActions
Actions #1

Updated by Mykola Golub over 5 years ago

  • Status changed from In Progress to Fix Under Review
  • Pull request ID set to 26079
Actions #2

Updated by Jason Dillaman over 5 years ago

  • Status changed from Fix Under Review to Pending Backport
Actions #3

Updated by Nathan Cutler over 5 years ago

  • Copied to Backport #38032: mimic: trash purge tries to remove non-user images added
Actions #4

Updated by Nathan Cutler about 5 years ago

  • Status changed from Pending Backport to Resolved
Actions

Also available in: Atom PDF