librbd: properly filter out trashed non-user images on purge

Fixes: https://tracker.ceph.com/issues/38006
Signed-off-by: Mykola Golub <mgolub@suse.com>
(cherry picked from commit 3d01cc627137d7f270969653fbae4b6230361d7a)

Conflicts:
	- src/librbd/api/Trash.cc
	- src/tools/rbd/action/Trash.cc
	    In mimic, the code that needs fixing was in
            'tools/rbd/action/Trash.cc'.